Using scroll instead of fixed since it does not work on iphone

--- a/src/assets/css/layout.css
+++ b/src/assets/css/layout.css
@@ -1,7 +1,8 @@
 .poster {
     height: 500px;
     width: 100%;
-    background: url('../images/buddha.jpg') no-repeat center center fixed;
+    background: url('../images/buddha.jpg') no-repeat center center;
+    background-attachment: scroll;
     background-size: cover;
     display: flex;
     align-items: center;
